<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_conf"
        android:orderInCategory="100"
        android:title="@string/action_conf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pedido_ok"
        android:title="@string/ok"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_pedido_atualizar"
        android:title="@string/action_pedido_atualizar"
        android:icon="@drawable/ic_baseline_refresh_24"
        app:showAsAction="ifRoom" />


</menu>