<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anequimplus.anequimdroid.ActivePrincipal">
    <item
        android:id="@+id/action_conf"
        android:orderInCategory="100"
        android:title="@string/action_conf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_conf_autenticacao"
        android:orderInCategory="100"
        android:title="@string/title_activity_autenticacao_antigo"
        app:showAsAction="never" />


</menu>
