<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_venda_carregar"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/activity_conta_consulta"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_venda_login"
        android:title="@string/title_activity_login"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_venda_pagamento"
        android:title="@string/title_activity_pagamento"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_venda_lista"
        android:title="@string/title_activity_list_venda"
        app:showAsAction="never"/>

</menu>