<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityInicial">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_logotipo_principal_foreground"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/inicial_link"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/botao_inicial_customizado"
        android:text="@string/inicial_registrar"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/botao_inicial_customizado"
        android:text="@string/inicial_entrar"
        android:layout_marginTop="10dp"
        />


</LinearLayout>